Tue Jul 24 05:21:34 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: Don't link Give/TakeConsole as those are stupid.
	  fixes bad ownership of /dev/console (which is handled by pam
	  anyway!) and fixes sessreg related bugs as well.

Mon Jul 23 12:42:29 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: s/Halt/Shut down/ and don't ask for saving
	  failsafe sessions.

Wed Jul 11 12:55:36 2001  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c, daemon/verify-crypt.c: when user doesn't exist
	  ask for a password anyway.  Also some sanity fixing all around.

Mon Jul  9 09:20:49 2001  Owen Taylor  <otaylor@redhat.com>

	* config/locale.alias: Fix typo - traditional, not traditonal.

Mon Jul 09 00:14:02 2001  George Lebl <jirka@5z.com>

	* Makefile.am, autogen.sh, configure.in, daemon/Makefile.am,
	  daemon/auth.c, daemon/gdm.c, daemon/gdm.h, daemon/misc.c,
	  daemon/server.c, daemon/slave.c, daemon/verify-crypt.c,
	  daemon/verify-pam.c, daemon/verify-shadow.c, daemon/xdmcp.c,
	  gui/Makefile.am, gui/gdmchooser.c, gui/gdmconfig.c, gui/gdmlogin.c,
	  gui/gdmphotosetup.c, gui/misc.[ch], po/POTFILES.in:  Use
	  vicious-extensions module rather then local routines

	* gui/icon-entry-hack.[ch]: remove, in vicious-extensions now

Sun Jul 08 16:38:02 2001  George Lebl <jirka@5z.com>

	* Release 2.2.3.1 

	* config/locale.alias, gui/gdmlanguages.c: added simplified and
	  traditional chinese

Fri Jul 06 04:25:39 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: Fix fd leak after dup2

Fri Jul 06 01:55:27 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Correct checks for chooser greeter binaries, and
	  fix Suspend feature

	* daemon/gdm.[ch], daemon/misc.[ch], gui/misc.[ch], daemon/server.c,
	  daemon/slave.c, gui/gdmconfig.c, gui/gdmlogin.c: Use popt for
	  splitting argv's, this makes things understand quotes which are
	  apparently already used in places (eek).  This underlines the need
	  for the vicious-extentions-module, I just cut and paste too much