@@ -1,3 +1,10 @@
+Tue Jul 24 20:25:00 2001  George Lebl <jirka@5z.com>
+
+	* daemon/xdmcp.c, daemon/gdm.h: embrace and extend xdmcp.  Add
+	  an opcode for a sucessful forwarded session so that the original
+	  manager can discard the indirect easily and fix some relevant bugs.
+	  Still not sure about the design, will make it more robust later.
+
 Tue Jul 24 05:21:34 2001  George Lebl <jirka@5z.com>
 
 	* gdm.spec.in: Don't link Give/TakeConsole as those are stupid.
